add CRUD for invoices

--- a/.eslintrc
+++ b/.eslintrc
@@ -30,6 +30,10 @@
     "no-shadow": 0,
     "no-console": 0,
     "no-unreachable": 0,
+    "jsx-a11y/anchor-is-valid": [ "error", {
+      "components": [ "Link" ],
+      "specialLink": [ "to" ]
+    }],
   },
   "settings": {
     "import/resolver": {
